added foods and footer section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="half-width">
             <h1> Are you tensed with diet?<br>
                 Have fun and Keep In Touch With <br>
-                <i><B><span>The<span class="letter">S</span>picy<span class="letter">K</span>achamorich</span></B></i>
+                <i><B><span>TheSpicyKachamorich</span></B></i>
             </h1>
             <p>
                 <span><i><b>The<span class="letter">S</span>picy<span class="letter">K</span>achamorich</b></i></span>
@@ -49,6 +49,45 @@
 
 
     </section>
+
+    <section id="foods">
+        <h1>Our Recipies</h1>
+        <p>Our dishes item is very spesial then other.We never serve frozy food.Our food is always fresh. We are<br>
+            renowned for our special green Salad.People from different area of the world come to our restaurent only for
+            eatting salad.</p>
+        <div class="food_item">
+            <div class="dishes">
+                <div class=picture><img src="img/Project Cover5.png" alt="Salad dishes" height="300px" width="320px">
+                </div>
+                <h2>Special Salad</h2>
+                <p>Our specialty is our special salad.It consist of green vegetable.There have green tomato,green
+                    chili,onion,carrot,latus life and other green vegetable.</p>
+            </div>
+            <div class="dishes">
+                <img src="img/Project Cover7.png" alt="Salad dishes" height="300px" width="320px">
+                <h2>Special Salad</h2>
+                <p>Our specialty is our special salad.It consist of green vegetable.There have green tomato,green
+                    chili,onion,carrot,latus life and other green vegetable.</p>
+            </div>
+            <div class="dishes">
+                <img src="img/Project Cover8.png" alt="Salad dishes" height="300px" width="320px">
+                <h2>Special Salad</h2>
+                <p>Our specialty is our special salad.It consist of green vegetable.There have green tomato,green
+                    chili,onion,carrot,latus life and other green vegetable.</p>
+            </div>
+        </div>
+
+        <footer id="footer">
+            <div class="address">
+                <h1><i><b>TheSpicyKachamorich</b></i></h1>
+                <p>36/5 Sotis chsndra lane, Boshundhora, Dhaka.<br>
+                    <Small>Mobile</Small> 01815136013<br>
+                    <Small>Email</Small> msdhar3112@gmail.com
+                </p>
+            </div>
+        </footer>
+
+
 </body>
 
 </html>
