navbar and location added

--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spicy Kachamorich</title>
+    <title>SpicyKachamorich</title>
     <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
+
+    <section>
+        <div class="nav-bar">
+            <div class="logo">
+                <img src="img/logo.jpg" alt=" Logo" height="80px" width="80px">
+            </div>
+
+            <ul class="menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about_us">About Us</a></li>
+                <li><a href="#foods">Foods</a></li>
+                <li><a href="#google_map">Location</a></li>
+            </ul>
+        </div>
+    </section>
+
     <Section id="home">
         <div class="half-width">
             <h1> Are you tensed with diet?<br>
@@ -29,9 +50,8 @@
         <div class="half-width">
             <img src="img/Model.png" alt="Model Image">
         </div>
-
-
     </Section>
+
 
     <section id="about_us">
         <div class="half-width">
@@ -43,12 +63,10 @@
                 maintaining diet.Our specialty is that we provide food calculating your required calory.Besides our
                 inner service we provide home delivery.For your many more interest call our reception.Link given
                 below...</p>
-            <a class="contact_button" target="_blank"
-                href="https://www.linkedin.com/in/madhu-sudan-dhar-22575a1a8/">Contact Us</a>
+            <a class="contact_button" target="_blank" href="https://www.facebook.com/madhusudan.dhar.315">Contact Us</a>
         </div>
-
-
     </section>
+
 
     <section id="foods">
         <h1>Our Recipies</h1>
@@ -59,33 +77,48 @@
             <div class="dishes">
                 <div class=picture><img src="img/Project Cover5.png" alt="Salad dishes" height="300px" width="320px">
                 </div>
-                <h2>Special Salad</h2>
+                <h2>Special Mixed Salad</h2>
                 <p>Our specialty is our special salad.It consist of green vegetable.There have green tomato,green
                     chili,onion,carrot,latus life and other green vegetable.</p>
             </div>
             <div class="dishes">
                 <img src="img/Project Cover7.png" alt="Salad dishes" height="300px" width="320px">
-                <h2>Special Salad</h2>
-                <p>Our specialty is our special salad.It consist of green vegetable.There have green tomato,green
-                    chili,onion,carrot,latus life and other green vegetable.</p>
+                <h2>Special Karola Salad</h2>
+                <p>Our specialty is our special salad.It consist of green mainly karola
+                    withtomato,greenchili,onion,carrot,latus life and other green vegetable.</p>
             </div>
             <div class="dishes">
                 <img src="img/Project Cover8.png" alt="Salad dishes" height="300px" width="320px">
-                <h2>Special Salad</h2>
+                <h2>Special peas-nut-olive Salad</h2>
                 <p>Our specialty is our special salad.It consist of green vegetable.There have green tomato,green
                     chili,onion,carrot,latus life and other green vegetable.</p>
             </div>
         </div>
+    </section>
 
-        <footer id="footer">
-            <div class="address">
-                <h1><i><b>TheSpicyKachamorich</b></i></h1>
-                <p>36/5 Sotis chsndra lane, Boshundhora, Dhaka.<br>
-                    <Small>Mobile</Small> 01815136013<br>
-                    <Small>Email</Small> msdhar3112@gmail.com
-                </p>
+    <section id="google_map">
+        <h1>Our Restaurent Location</h1>
+        <div class="mapouter">
+            <div class="gmap_canvas"><iframe width="100%" height="500" id="gmap_canvas"
+                    src="https://maps.google.com/maps?q=Hotel%20pen%20pacific%20,dhaka&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                    href="https://fmovies2.org"></a><br>
+                <style>
+
+                </style>
             </div>
-        </footer>
+        </div>
+    </section>
+
+    <footer id="footer">
+        <div class="address">
+            <h1><span>TheSpicyKachamorich</span></h1>
+            <p>36/5 Sotis chsndra lane, Boshundhora, Dhaka.<br>
+                <Small>Mobile</Small> 01815136013<br>
+                <Small>Email</Small> msdhar3112@gmail.com
+            </p>
+        </div>
+    </footer>
 
 
 </body>
